# TicTacToe24

./: CMakeLists.txt  README.md
src/: AIPlayer.cpp  AIPlayer.h  Random.cpp  Random.h  main.cpp  player.cpp  player.h
